# xpip-python

./: README.md  setup.cfg
.pypa/windows/: upload.bat
xpip/: __init__.py  command.py  util.py
xpip/builder/: __init__.py  build.py  setup.py
xpip/installer/: mirror.py  upload.py
