[metadata]
name = xpip-python
version = attr: xpip.__version__
keywords = python, pip
description = Python package. Build. Install.
author = mingzhe
author_email = zoumingzhe@qq.com
url = https://github.com/zoumingzhe/xpip-python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Source Code = https://github.com/zoumingzhe/xpip-python
    Bug Tracker = https://github.com/zoumingzhe/xpip-python/issues
    Documentation = https://github.com/zoumingzhe/xpip-python

[options]
zip_safe = True
include_package_data = True,
python_requires = >=3.6
install_requires =
    xarg-python >= 0.5
    pip
    toml
    ping3
    tabulate
    setuptools
    twine
    keyring
    keyrings.alt
packages = find:

[options.entry_points]
console_scripts =
    xpip = xpip.command:main
    xpip-build = xpip.builder.build:main
    xpip-upload = xpip.installer.upload:main
    xpip-mirror = xpip.installer.mirror:main

[options.packages.find]
include = xpip*
exclude =
    test

[options.package_data]
xpip.config =
    mirrors.toml
